src/objects/Petitioner_Invovled__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Petitioners Involved</relationshipLabel>
        <relationshipName>Petitioners_Involved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Case</label>
        <referenceTo>Court_Case__c</referenceTo>
        <relationshipLabel>Petitioners Involved</relationshipLabel>
        <relationshipName>Petitioners_Involved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPO_Has_been_harassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO - Has been harassed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPO_Has_been_harmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO - Has been harmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPO_Has_been_stalked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO - Has been stalked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPO_Has_been_threatened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPO - Has been threatened</label>
        <type>Checkbox</type>
    </fields>
    <label>Petitioner Invovled</label>
    <nameField>
        <displayFormat>Petitioner - {000000}</displayFormat>
        <label>Petitioner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Petitioners Involved</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>